# wallet-api-test

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4596b8c51480_create_wallets.py
app/: main.py
app/api/v1/: wallets.py
app/core/: db.py
app/models/: __init__.py  base.py  wallet.py
app/schemas/: wallet.py
tests/: conftest.py  test_wallets.py
