[tool.poetry]
name = "wallet-api"
version = "0.1.0"
description = ""
authors = ["Kulagin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.128.8,<0.129.0"
uvicorn = ">=0.40.0,<0.41.0"
sqlalchemy = ">=2.0.46,<3.0.0"
asyncpg = ">=0.31.0,<0.32.0"
alembic = ">=1.18.4,<2.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
ruff = "^0.15.0"
black = "^26.1.0"

